--- a/Examples/Monocular/SPKITTI04-12.yaml
+++ b/Examples/Monocular/SPKITTI04-12.yaml
@@ -22,24 +22,24 @@ Camera.fps: 10.0
 Camera.RGB: 1
 
 #--------------------------------------------------------------------------------------------
-# ORB Parameters
+# SuperPoint Parameters
 #--------------------------------------------------------------------------------------------
 
-# ORB Extractor: Number of features per image
-ORBextractor.nFeatures: 2000
+# SuperPoint Detector: Number of features per image
+SPDetector.nFeatures: 500
 
-# ORB Extractor: Scale factor between levels in the scale pyramid
-ORBextractor.scaleFactor: 1.2
+# SuperPoint Detector: Scale factor between levels in the scale pyramid 
+SPDetector.scaleFactor: 2
 
-# ORB Extractor: Number of levels in the scale pyramid
-ORBextractor.nLevels: 8
+# SuperPoint Detector: Number of levels in the scale pyramid
+SPDetector.nLevels: 1
 
-# ORB Extractor: Fast threshold
-# Image is divided in a grid. At each cell FAST are extracted imposing a minimum response.
-# Firstly we impose iniThFAST. If no corners are detected we impose a lower value minThFAST
-# You can lower these values if your images have low contrast
-ORBextractor.iniThFAST: 20
-ORBextractor.minThFAST: 7
+## ORB Extractor: Fast threshold
+## Image is divided in a grid. At each cell FAST are extracted imposing a minimum response.
+## Firstly we impose iniThFAST. If no corners are detected we impose a lower value minThFAST
+## You can lower these values if your images have low contrast
+SPDetector.iniThFAST: 0.0625
+SPDetector.minThFAST: 0.05
 
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
