build Test: Too small keypoints

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,8 @@
         "string": "cpp",
         "variant": "cpp",
         "__nullptr": "cpp",
-        "locale": "cpp"
+        "locale": "cpp",
+        "*.txx": "cpp",
+        "__config": "cpp"
     }
 }
