--- a/Examples/Monocular/SPKITTI00-02.yaml
+++ b/Examples/Monocular/SPKITTI00-02.yaml
@@ -22,7 +22,7 @@ Camera.fps: 10.0
 Camera.RGB: 1
 
 #--------------------------------------------------------------------------------------------
-# ORB Parameters
+# SuperPoint Parameters
 #--------------------------------------------------------------------------------------------
 
 # SuperPoint Detector: Number of features per image
@@ -34,12 +34,12 @@ SPDetector.scaleFactor: 2
 # SuperPoint Detector: Number of levels in the scale pyramid
 SPDetector.nLevels: 1
 
-## ORB Extractor: Fast threshold
-## Image is divided in a grid. At each cell FAST are extracted imposing a minimum response.
-## Firstly we impose iniThFAST. If no corners are detected we impose a lower value minThFAST
-## You can lower these values if your images have low contrast
+## SuperPoint Model: threshold
 SPDetector.IniThresSP: 0.045
 SPDetector.MinThresSP: 0.03
+
+# ComputeSPBoW()'s transform()'s "levelup"  Parameter.
+SPMatcher.levelup: 3
 
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
