--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,11 @@
         "__nullptr": "cpp",
         "locale": "cpp",
         "*.txx": "cpp",
-        "__config": "cpp"
+        "__config": "cpp",
+        "__tree": "cpp",
+        "__node_handle": "cpp",
+        "__split_buffer": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
