Clean up the output and pulled some parameters into the configuration file

--- a/Examples/Monocular/SPKITTI00-02.yaml
+++ b/Examples/Monocular/SPKITTI00-02.yaml
@@ -1,8 +1,11 @@
 %YAML:1.0
+##################################
+### SuperPoint-SLAM Parameters ###
+##################################
 
-#--------------------------------------------------------------------------------------------
-# Camera Parameters. Adjust them!
-#--------------------------------------------------------------------------------------------
+#-----------------------------------#
+#  Camera Parameters. Adjust them!  #
+#-----------------------------------#
 
 # Camera calibration and distortion parameters (OpenCV) 
 Camera.fx: 718.856
@@ -21,12 +24,20 @@ Camera.fps: 10.0
 # Color order of the images (0: BGR, 1: RGB. It is ignored if images are grayscale)
 Camera.RGB: 1
 
-#--------------------------------------------------------------------------------------------
-# SuperPoint Parameters
-#--------------------------------------------------------------------------------------------
+#--------------#
+#  For System  #
+#--------------#
+
+# 0: Release,  1:Debug(Print some information for debuggig),  2:Full Debug(Print more information for debuggig)
+System.RunType: 0
+  
+#------------------#
+#  For SPDetector  #
+#------------------#
 
 # SuperPoint Detector: Number of features per image
-SPDetector.nFeatures: 500
+# SPDetector.nFeatures: 500
+
 
 # SuperPoint Detector: Scale factor between levels in the scale pyramid 
 SPDetector.scaleFactor: 2
@@ -39,7 +50,7 @@ SPDetector.IniThresSP: 0.0625
 SPDetector.MinThresSP: 0.015
 
 # ComputeSPBoW()'s transform()'s "levelup"  Parameter.
-SPMatcher.levelup: 0
+SPMatcher.levelup: 1
 
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
