--- a/Examples/Monocular/SPKITTI04-12.yaml
+++ b/Examples/Monocular/SPKITTI04-12.yaml
@@ -31,7 +31,7 @@ Camera.RGB: 1
 
 # 0: Release,  1:Debug(Print some information for debuggig),  2:Full Debug(Print more information for debuggig)
 System.RunType: 0
-  
+System.Fps: 0.15
 #------------------#
 #  For SPDetector  #
 #------------------#
@@ -43,24 +43,19 @@ System.RunType: 0
 SPDetector.scaleFactor: 2
 
 # SuperPoint Detector: Number of levels in the scale pyramid
-SPDetector.nLevels: 1
+SPDetector.nLevels: 2
 
 ## ORB Extractor: Fast threshold
 ## Image is divided in a grid. At each cell FAST are extracted imposing a minimum response.
 ## Firstly we impose iniThFAST. If no corners are detected we impose a lower value minThFAST
 ## You can lower these values if your images have low contrast
-<<<<<<< HEAD
-SPDetector.IniThresSP: 0.03
-SPDetector.MinThresSP: 0.015
-=======
-SPDetector.IniThresSP: 0.0625
-SPDetector.MinThresSP: 0.08
->>>>>>> scale
+SPDetector.IniThresSP: 0.02
+SPDetector.MinThresSP: 0.06
 
 
 # ComputeSPBoW()'s transform()'s "levelup"  Parameter.
 SPMatcher.levelup: 0
-SPMatcher.windowSize: 30
+SPMatcher.windowSize: 15
 
 Tracking.LocalMapConstraint1: 50
 Tracking.LocalMapConstraint2: 30
