--- a/Examples/Monocular/SPTUM2.yaml
+++ b/Examples/Monocular/SPTUM2.yaml
@@ -28,7 +28,8 @@ Camera.RGB: 1
 
 # 0: Release,  1:Debug(Print some information for debuggig),  2:Full Debug(Print more information for debuggig)
 System.RunType: 0
-  
+System.Fps: 0.15
+
 #------------------#
 #  For SPDetector  #
 #------------------#
@@ -46,8 +47,8 @@ SPDetector.nLevels: 1
 ## Image is divided in a grid. At each cell FAST are extracted imposing a minimum response.
 ## Firstly we impose iniThFAST. If no corners are detected we impose a lower value minThFAST
 ## You can lower these values if your images have low contrast
-SPDetector.IniThresSP: 0.0625
-SPDetector.MinThresSP: 0.08
+SPDetector.IniThresSP: 0.02
+SPDetector.MinThresSP: 0.05
 
 
 # ComputeSPBoW()'s transform()'s "levelup"  Parameter.
@@ -56,16 +57,17 @@ SPMatcher.windowSize: 15
 
 Tracking.LocalMapConstraint1: 50
 Tracking.LocalMapConstraint2: 30
+Tracking.thRefRatio: 0.6
 
-LocalMapper.cosParallaxRays: 0.9998
-
+LocalMapper.cosParallaxRays: 0.99999
+LocalMapper.CullingRatio: 0.95
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
 #--------------------------------------------------------------------------------------------
 Viewer.KeyFrameSize: 0.05
 Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 0.9
-Viewer.PointSize:2
+Viewer.PointSize: 2
 Viewer.CameraSize: 0.08
 Viewer.CameraLineWidth: 3
 Viewer.ViewpointX: 0
