--- a/Examples/Monocular/SPKITTI04-12.yaml
+++ b/Examples/Monocular/SPKITTI04-12.yaml
@@ -31,27 +31,19 @@ Camera.RGB: 1
 
 # 0: Release,  1:Debug(Print some information for debuggig),  2:Full Debug(Print more information for debuggig)
 System.RunType: 0
-System.Fps: 0.15
+System.Fps: 0.0
+
 #------------------#
 #  For SPDetector  #
 #------------------#
-
-# SuperPoint Detector: Number of features per image
-# SPDetector.nFeatures: 500
 
 # SuperPoint Detector: Scale factor between levels in the scale pyramid 
 SPDetector.scaleFactor: 2
 
 # SuperPoint Detector: Number of levels in the scale pyramid
-SPDetector.nLevels: 2
-
-## ORB Extractor: Fast threshold
-## Image is divided in a grid. At each cell FAST are extracted imposing a minimum response.
-## Firstly we impose iniThFAST. If no corners are detected we impose a lower value minThFAST
-## You can lower these values if your images have low contrast
-SPDetector.IniThresSP: 0.02
-SPDetector.MinThresSP: 0.06
-
+SPDetector.nLevels: 1
+SPDetector.IniThresSP: 0.03
+SPDetector.MinThresSP: 0.02
 
 # ComputeSPBoW()'s transform()'s "levelup"  Parameter.
 SPMatcher.levelup: 0
@@ -59,9 +51,10 @@ SPMatcher.windowSize: 15
 
 Tracking.LocalMapConstraint1: 50
 Tracking.LocalMapConstraint2: 30
+Tracking.thRefRatio: 0.6
 
-LocalMapper.cosParallaxRays: 0.9999
-
+LocalMapper.cosParallaxRays: 0.99999
+LocalMapper.CullingRatio: 0.95
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
 #--------------------------------------------------------------------------------------------
