--- a/Examples/Monocular/SPTUM3.yaml
+++ b/Examples/Monocular/SPTUM3.yaml
@@ -27,6 +27,7 @@ Camera.RGB: 1
 
 # 0: Release,  1:Debug(Print some information for debuggig),  2:Full Debug(Print more information for debuggig)
 System.RunType: 0
+System.Fps: 0.0
   
 #------------------#
 #  For SPDetector  #
@@ -46,7 +47,7 @@ SPDetector.nLevels: 1
 ## Firstly we impose iniThFAST. If no corners are detected we impose a lower value minThFAST
 ## You can lower these values if your images have low contrast
 SPDetector.IniThresSP: 0.02
-SPDetector.MinThresSP: 0.08
+SPDetector.MinThresSP: 0.04
 
 
 # ComputeSPBoW()'s transform()'s "levelup"  Parameter.
@@ -55,8 +56,10 @@ SPMatcher.windowSize: 15
 
 Tracking.LocalMapConstraint1: 50
 Tracking.LocalMapConstraint2: 30
+Tracking.thRefRatio: 0.6
 
-LocalMapper.cosParallaxRays: 0.9999
+LocalMapper.cosParallaxRays: 0.99999
+LocalMapper.CullingRatio: 0.95
 
 #--------------------------------------------------------------------------------------------
 # Viewer Parameters
@@ -64,7 +67,7 @@ LocalMapper.cosParallaxRays: 0.9999
 Viewer.KeyFrameSize: 0.05
 Viewer.KeyFrameLineWidth: 1
 Viewer.GraphLineWidth: 0.9
-Viewer.PointSize:2
+Viewer.PointSize: 2
 Viewer.CameraSize: 0.08
 Viewer.CameraLineWidth: 3
 Viewer.ViewpointX: 0
